# sora2-parachain

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Jenkinsfile  Jenkinsfile-env  Jenkinsfile-relay  README.md  makefile  run_script.sh  run_script_db.sh
.github/ISSUE_TEMPLATE/: TECH_TASK.yml
.github/workflows/: codecov.yml  coverage.yml
.hooks/: pre-commit
bridge-docker/: Dockerfile.parachain  Dockerfile.polkadot  docker-compose.yml  recipe.json
bridge-docker/build-spec-scripts/: karura.sh  polkadot.sh  sora.sh
common/: Cargo.toml
common/src/: lib.rs  primitives.rs
docker/release/: Dockerfile
housekeeping/docker/develop/: Dockerfile
housekeeping/docker/relay/: Dockerfile
housekeeping/docker/release/: Dockerfile  parachain_registration.sh
housekeeping/scripts/: build.sh  clippy.sh  coverage.sh
misc/: pallet-weight-template.hbs  run_all_pallet_benches.local.sh  run_all_pallet_benches.sh
node/: Cargo.toml
node/res/: alpha.json  alphanet.json  kusama.json  polkadot.json  rococo.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets/rpc/: Cargo.toml
pallets/assets/runtime-api/: Cargo.toml
pallets/assets/src/: benchmarking.rs  mock.rs
pallets/bonding-curve-pool/: Cargo.toml
pallets/bonding-curve-pool/src/: lib.rs  mock.rs
pallets/converter/: Cargo.toml
pallets/converter/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/dex-api/: Cargo.toml
pallets/dex-api/benchmarking/: Cargo.toml
pallets/dex-api/benchmarking/src/: lib.rs  mock.rs
pallets/dex-api/rpc/: Cargo.toml
pallets/dex-api/runtime-api/: Cargo.toml
pallets/dex-api/src/: mock.rs
pallets/dex-manager/: Cargo.toml
pallets/dex-manager/rpc/: Cargo.toml
pallets/dex-manager/runtime-api/: Cargo.toml
pallets/dex-manager/src/: mock.rs  tests.rs
pallets/liquidity-proxy/: Cargo.toml
pallets/liquidity-proxy/benchmarking/: Cargo.toml
pallets/liquidity-proxy/benchmarking/src/: mock.rs
pallets/liquidity-proxy/rpc/: Cargo.toml
pallets/liquidity-proxy/runtime-api/: Cargo.toml
pallets/liquidity-proxy/src/: mock.rs
pallets/messages/src/: outbound_lane.rs
pallets/mock-liquidity-source/: Cargo.toml
pallets/mock-liquidity-source/src/: mock.rs
pallets/permissions/: Cargo.toml
pallets/permissions/src/: mock.rs  tests.rs
pallets/pool-xyk/: Cargo.toml
pallets/pool-xyk/benchmarking/: Cargo.toml
pallets/pool-xyk/benchmarking/src/: lib.rs  mock.rs
pallets/pool-xyk/src/: action_deposit_liquidity.rs  action_pair_swap.rs  action_withdraw_liquidity.rs  aliases.rs  lib.rs  math.rs  mock.rs  tests.rs  utils.rs
pallets/sora2-bridge/grandpa/: Cargo.toml
pallets/sora2-bridge/messages/: Cargo.toml
pallets/sora2-bridge/messages/src/: inbound_lane.rs  lib.rs  mock.rs  weights_ext.rs
pallets/sora2-bridge/parachains/: Cargo.toml
pallets/sora2-bridge/parachains/src/: lib.rs  weights_ext.rs
pallets/sora2-bridge/primitives/header-chain/src/: justification.rs
pallets/sora2-bridge/primitives/runtime/src/: chain.rs  lib.rs
pallets/sora2-trustless-bridge/beefy-light-client/: Cargo.toml
pallets/sora2-trustless-bridge/beefy-light-client/src/: lib.rs
pallets/sora2-trustless-bridge/common/: Cargo.toml
pallets/sora2-trustless-bridge/common/src/: bitfield.rs  lib.rs  merkle_proof.rs  simplified_mmr_proof.rs
pallets/technical/: Cargo.toml
pallets/technical/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
pallets/trading-pair/: Cargo.toml
pallets/trading-pair/rpc/: Cargo.toml
pallets/trading-pair/runtime-api/: Cargo.toml
pallets/trading-pair/src/: benchmarking.rs  mock.rs
pallets/transactor/: Cargo.toml
pallets/transactor/src/: impls.rs  lib.rs  mock.rs  tests.rs
pallets/xcm-app/: Cargo.toml
pallets/xcm-app-sudo-wrapper/: Cargo.toml
pallets/xcm-app-sudo-wrapper/src/: lib.rs
pallets/xcm-app/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  tests.rs  weights.rs
parachain/: Cargo.toml
parachain-common/: Cargo.toml
parachain-common/src/: lib.rs  primitives.rs  weights.rs  xcm.rs
parachain-gen/: Cargo.toml  README.md  build.rs
parachain-gen/src/: lib.rs  main.rs
parachain-gen/src/bytes/: parachain_metadata.scale
parachain/common/: Cargo.toml
parachain/node/src/: chain_spec.rs  command.rs  service.rs
parachain/pallets/assets/: Cargo.toml
parachain/pallets/assets/src/: mock.rs
parachain/pallets/bonding-curve-pool/: Cargo.toml
parachain/pallets/bonding-curve-pool/src/: mock.rs
parachain/pallets/dex-api/: Cargo.toml
parachain/pallets/dex-api/src/: mock.rs
parachain/pallets/dex-manager/: Cargo.toml
parachain/pallets/dex-manager/src/: mock.rs
parachain/pallets/liquidity-proxy/: Cargo.toml
parachain/pallets/liquidity-proxy/src/: mock.rs
parachain/pallets/mock-liquidity-source/: Cargo.toml
parachain/pallets/mock-liquidity-source/src/: mock.rs
parachain/pallets/permissions/: Cargo.toml
parachain/pallets/permissions/src/: mock.rs
parachain/pallets/pool-xyk/: Cargo.toml
parachain/pallets/pool-xyk/src/: action_pair_swap.rs  lib.rs  mock.rs  tests.rs
parachain/pallets/technical/: Cargo.toml
parachain/pallets/technical/src/: mock.rs
parachain/pallets/template/: Cargo.toml
parachain/pallets/template/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/trading-pair/: Cargo.toml
parachain/pallets/trading-pair/src/: mock.rs
parachain/runtime/: Cargo.toml
parachain/runtime/src/: lib.rs
primitives/header-chain/tests/: implementation_match.rs
primitives/runtime/src/: storage_proof.rs
run/: genesis  genesis-wasm  rococo-local.json
runtime/: Cargo.toml  build.rs
runtime/src/: currency_id_convert.rs  impls.rs  lib.rs  migrations.rs  trader.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs
runtime/src/xcm_tests/: mod.rs  para_x.rs  relay.rs  tests.rs
utils/remote-ext/: Cargo.toml
utils/remote-ext/src/: main.rs
