[profile.release]
panic = "unwind"

[patch."https://github.com/sora-xor/sora2-common.git"]
# beefy-light-client = { path = "../sora2-common/pallets/beefy-light-client" }
# beefy-light-client-rpc = { path = "../sora2-common/pallets/beefy-light-client/rpc" }
# beefy-light-client-runtime-api = { path = "../sora2-common/pallets/beefy-light-client/runtime-api" }
# leaf-provider = { path = "../sora2-common/pallets/leaf-provider" }
# leaf-provider-rpc = { path = "../sora2-common/pallets/leaf-provider/rpc" }
# leaf-provider-runtime-api = { path = "../sora2-common/pallets/leaf-provider/runtime-api" }
# bridge-common = { path = "../sora2-common/pallets/bridge-common" }
# dispatch = { path = "../sora2-common/pallets/dispatch" }
# bridge-types = { path = "../sora2-common/pallets/types" }
# bridge-data-signer = { path = "../sora2-common/pallets/data-signer" }
# multisig-verifier = { path = "../sora2-common/pallets/multisig-verifier" }
# substrate-bridge-channel = { path = "../sora2-common/pallets/substrate-channel" }
# bridge-channel-rpc = { path = "../sora2-common/pallets/substrate-channel/rpc" }
beefy-light-client = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
beefy-light-client-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
beefy-light-client-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
leaf-provider = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
leaf-provider-rpc = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
leaf-provider-runtime-api = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
bridge-common = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
dispatch = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
bridge-types = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
bridge-data-signer = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
multisig-verifier = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }
substrate-bridge-channel = { git = "https://github.com/sora-xor//sora2-common.git", tag = "1.0.21" }

[workspace]
members = [
    "node",
    "pallets/*",
    "runtime",
    "parachain-gen",
    "parachain-common",
    "utils/*",
]
resolver = "2"
