[package]
name = "parachain-common"
version = "0.1.0"
authors = ["Polka Biome Ltd. <jihoon@tutanota.de>"]
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-parachain'
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.137", features = ["derive"], default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.38" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.38" }
xcm-builder = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.38" }
xcm = { git = "https://github.com/paritytech/polkadot.git", default-features = false, branch = "release-v0.9.38" }
bridge-types = { git = "https://github.com/sora-xor/sora2-common.git", branch = "bridge-data-signer", default-features = false } 

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"xcm/std",
	"xcm-builder/std",
	"polkadot-parachain/std",
]
