[package]
name = "parachain-gen"
version = "0.1.0"
edition = "2021"

[build-dependencies]
sora2-parachain-runtime = { path = "../runtime", features = [
    "parachain-gen",
] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.38", default-features = false }

[features]
default = []
rococo = ["sora2-parachain-runtime/rococo"]
alphanet = ["sora2-parachain-runtime/alphanet"]
kusama = ["sora2-parachain-runtime/kusama"]
polkadot = ["sora2-parachain-runtime/polkadot"]
